--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@media screen and (max-width:640px){
+    .smallhidden{
+        display: none;
+    }
+}
